Fixed personal.scss, got rid of 'stupid' scrollbars, enabled horizontal scrollbar by default

--- a/personal.scss
+++ b/personal.scss
@@ -24,7 +24,6 @@ $dim-background: 60%;
 $glow-unread-server: false;
 
 $server-list-above: true;
-$server-list-above-enable-scrollbar: true;
 $collapse-member-list: true;
 $status-indicator-border: true;
 $channel-hash-margin: true;
@@ -32,7 +31,6 @@ $code-block-images: true;
 $web-hide-download-button: true;
 $alternative-user-popup: true;
 $compact-mode-tweaks: true;
-$hide-unread-mentions-bar: true;
 $show-loading: true;
 
 $status-indicator-border-thickness: 15px;
