--- a/tweaks/_variables.scss
+++ b/tweaks/_variables.scss
@@ -9,7 +9,6 @@ $web-hide-download-button: false;// Hides the download button in the web client
 $alternative-user-popup: false; // Changes the look and feel of the user popup 
 $compact-mode-tweaks: false;    // Makes compact mode more compact, among other things
 $hide-unread-mentions-bar: false;// 'unread mentions' bar can get in the way when using horizontal server list
-$server-list-above-enable-scrollbar: false;// Adds a horizontal scrollbar to the server list
 
 
 // Settings
